// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions accountUpdate 1`] = `
Object {
  "type": "account",
  "value": "test",
}
`;

exports[`actions ethBalanceUpdate 1`] = `
Object {
  "type": "ethBalance",
  "value": Object {
    "eth": 123,
    "weth": 456,
  },
}
`;

exports[`actions getAccount 1`] = `
Array [
  Object {
    "type": "account",
    "value": "0x0",
  },
]
`;

exports[`actions getNetwork 1`] = `
Array [
  Object {
    "type": "network",
    "value": 123,
  },
]
`;

exports[`actions getNetwork 2`] = `
Array [
  Object {
    "type": "ethBalance",
    "value": Object {
      "eth": 111,
      "weth": 222,
    },
  },
]
`;

exports[`actions networkUpdate 1`] = `
Object {
  "type": "network",
  "value": 123,
}
`;
